Potential fix for jumping

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -174,6 +174,7 @@ input[type="range"]::after {
   border: 10px solid blue;
   border-radius: 2px;
   border: none;
+  pointer-events: none;
 }
 
 input[type="range"]::-webkit-slider-thumb {
